--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+@use "core/reset";
+@use "core/css-variables";
+@use "core/typography";
+
+@use "components/buttons";
+
+@use "utilities/functions/color";
+
+body {
+  background-color: color.base(primary);
+  color: color.text(primary);
+}
